# masters-of-shithead

./: LICENSE  MANIFEST.in  PYINSTALLER.md  README.md  README_EXECUTABLE.md  config.json  pyproject.toml  readable_fup_table.txt  setup.py  shithead_regeln.txt  shithead_rules.txt
src/: ai_test_stats.json  ai_test_stats.txt  ms_shithead.spec  shithead.desktop  shithead.spec  shithead_start.py
src/shithead/: __main__.py  analyzer.py  card_writer.py  cards.py  config.py  discard.py  face_up_table.json  fup_table.py  game.py  gui.py  monte_carlo.py  monte_carlo_node.py  ms_rules_eng.json  ms_rules_ger.json  play.py  player.py  result.py  rules.py  rules_eng.json  rules_ger.json  shithead.py  start.py  state.py  stats.py  title.json
